Prevent step controls from overflowing container

--- a/styles/getting-started/_getting-started-message.scss
+++ b/styles/getting-started/_getting-started-message.scss
@@ -50,6 +50,7 @@ $getting-started-message-color: $dark-100;
   position: absolute;
   z-index: 400;
   max-width: 100vw;
+  min-width: 210px;
   padding: 10px 15px;
   text-align: left;
   // The button controls already have bottom margin that creates breathing room
